[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A script to fetch PubMed papers"
authors = [
    {name = "tulasi5",email = "ranguruchu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages=[
    {include="pubmed"}
]

[tool.poetry.scripts]
get-papers-list = "pubmed.main:main"



